se deja el software completamente funcional listo para ser utilizado quedan faltando pruebas unitarias y de integración

--- a/networking/apiRestPHP/Dockerfile
+++ b/networking/apiRestPHP/Dockerfile
@@ -9,29 +9,29 @@ RUN apt-get update && apt-get install -y \
 # Activar módulos Apache necesarios
 RUN a2enmod rewrite headers
 
-# Instalar Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+# Instalar Composer (usando una etiqueta fija)
+COPY --from=composer:2.3 /usr/bin/composer /usr/bin/composer
 
 # Copiar configuración personalizada de Apache
 COPY miservicio.conf /etc/apache2/sites-available/miservicio.conf
 
-# Habilitar configuración y deshabilitar la por defecto
-RUN a2ensite miservicio.conf \
-    && a2dissite 000-default.conf
+# Habilitar la configuración personalizada y deshabilitar la por defecto
+RUN a2ensite miservicio.conf && a2dissite 000-default.conf
 
-# Definir directorio de trabajo
-WORKDIR /var/www/html
-
-# Copiar archivos del proyecto
+# Establecer el directorio de trabajo en la raíz del proyecto
+WORKDIR /var/www/html/networking/apiRestPHP
 COPY . .
 
-# Instalar dependencias PHP
+# Instalar dependencias PHP (desde la raíz del proyecto)
 RUN composer install --no-dev --optimize-autoloader
 
-# Ajustar permisos para Apache
-RUN chown -R www-data:www-data /var/www/html
+# Ajustar permisos para Apache (se aplica a todo el proyecto)
+RUN chown -R www-data:www-data /var/www/html/networking/apiRestPHP
 
-# Exponer puerto
+# Establecer el directorio de trabajo en la carpeta public (DocumentRoot)
+WORKDIR /var/www/html/networking/apiRestPHP/public
+
+# Exponer el puerto 80
 EXPOSE 80
 
 # Iniciar Apache en primer plano
