--- a/networking/apiRestPHP/miservicio.conf
+++ b/networking/apiRestPHP/miservicio.conf
@@ -1,22 +1,16 @@
 <VirtualHost *:80>
-    # ServerName para identificar el host. Opcional en desarrollo
-    # ServerName localhost
-
     ServerAdmin webmaster@localhost
+    ServerName localhost
+    DocumentRoot /var/www/html/networking/apiRestPHP/public
 
-    DocumentRoot /var/www/html/public
-    <Directory /var/www/html/public>
-        Options FollowSymLinks
+    <Directory /var/www/html/networking/apiRestPHP/public>
+        Options -Indexes +FollowSymLinks
         AllowOverride All
         Require all granted
+        <FilesMatch "^\.ht">
+            Require all denied
+        </FilesMatch>
     </Directory>
-
-    # (Opcional) Si necesitas habilitar CORS directamente desde Apache, en lugar de PHP:
-     <IfModule mod_headers.c>
-       Header always set Access-Control-Allow-Origin "*"
-       Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-       Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
-     </IfModule>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
