--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,27 @@
 # Configuración de la base de datos (PHP API y otros servicios)
-DB_HOST=localhost
+DB_CONNECTION=pgsql
+DB_HOST=db
 DB_PORT=5432
-DB_NAME=nombreDeTuDB
-DB_USER=usuario
-DB_PASS=contraseña
+DB_NAME=pruebaTecnica
+DB_USERNAME=tu_usuario
+DB_PASSWORD=tu_contraseña
+
+APP_NAME=Lumen
+APP_ENV=local
+APP_DEBUG=true
+APP_URL=http://localhost
+APP_TIMEZONE=UTC
+
+LOG_CHANNEL=stack
+LOG_SLACK_WEBHOOK_URL=
 
 # Configuración de Redis (para servicios de autenticación)
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=tuRedisPassword
-SESSION_SECRET=algúnSecretoMuySeguro
+REDIS_URL=redis://:tu_contraseña@redis:6379
+REDIS_PASSWORD=tu_contraseña
+SESSION_SECRET=tu_session_secret
+
+JWT_SECRET=tu_jwt_secret
+JWT_EXPIRATION=10h
 
 # Otras variables globales
 NODE_ENV=development
