--- a/networking/apiRestLavarel/miservicio.conf
+++ b/networking/apiRestLavarel/miservicio.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     ServerName localhost
-    DocumentRoot /var/www/html/networking/apiRestPHP/public
+    DocumentRoot /var/www/html/public
 
-    <Directory /var/www/html/networking/apiRestPHP/public>
+    <Directory /var/www/html/public>
         Options -Indexes +FollowSymLinks
         AllowOverride All
         Require all granted
